import React from 'react';
import renderer from 'react-test-renderer';
import { PaginationRow, PAGINATION_VIEW_TYPES } from './index';

const testPaginationRowSnapshot = viewType => {
  const component = renderer.create(
    <PaginationRow
      contentViewPagination
      viewType={viewType}
      className="paginator"
      pagination={{
        page: 1,
        perPage: 6,
        perPageOptions: [6, 10, 15, 25, 50]
      }}
      amountOfPages={5}
      itemCount={75}
      itemsStart={1}
      itemsEnd={15}
      messages={{
        firstPage: 'עמוד ראשון',
        previousPage: 'עמוד קודם',
        nextPage: 'עמוד הבא',
        lastPage: 'עמוד אחרון',
        perPage: 'לדף',
        of: 'שֶׁל'
      }}
      onPerPageSelect={jest.fn()}
      onFirstPage={jest.fn()}
      onPreviousPage={jest.fn()}
      onPageInput={jest.fn()}
      onNextPage={jest.fn()}
      onLastPage={jest.fn()}
    />
  );
  let tree = component.toJSON();
  expect(tree).toMatchSnapshot();
};

PAGINATION_VIEW_TYPES.forEach(viewType => {
  test(`PaginationRow ${viewType} renders properly`, () => {
    testPaginationRowSnapshot(viewType);
  });
});

test('PaginationRow.Items renders', () => {
  const component = renderer.create(
    <PaginationRow.Items
      itemCount={55}
      itemsStart={0}
      itemsEnd={10}
      messagesOf={'of'}
    />
  );
  let tree = component.toJSON();
  expect(tree).toMatchSnapshot();
});

test('PaginationRow.Back renders', () => {
  const component = renderer.create(
    <PaginationRow.Back
      page={1}
      messagesFirstPage={'first page'}
      messagesPreviousPage={'previous page'}
      onFirstPage={jest.fn()}
      onPreviousPage={jest.fn()}
    />
  );
  let tree = component.toJSON();
  expect(tree).toMatchSnapshot();
});

test('PaginationRow.ButtonGroup renders', () => {
  const component = renderer.create(
    <PaginationRow.ButtonGroup className="custom-class" />
  );
  let tree = component.toJSON();
  expect(tree).toMatchSnapshot();
});

test('PaginationRow.Forward renders', () => {
  const component = renderer.create(
    <PaginationRow.Forward
      page={1}
      amountOfPages={4}
      messagesNextPage={'Next Page'}
      messagesLastPage={'Last Page'}
      onNextPage={jest.fn()}
      onLastPage={jest.fn()}
    />
  );
  let tree = component.toJSON();
  expect(tree).toMatchSnapshot();
});

test('PaginationRow.AmountOfPages renders', () => {
  const component = renderer.create(
    <PaginationRow.AmountOfPages messagesOf={'of'} amountOfPages={4} />
  );
  let tree = component.toJSON();
  expect(tree).toMatchSnapshot();
});
